# dojocho

./: .dojorc  .gitignore  AGENTS.md  KATAS.md  LICENSE.md  README.md  docker-compose.yml  dojo.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts  vitest.e2e.config.ts
dojos/build-llm/: .gitignore  .npmignore  DOJO.md  README.md  _aggregate.py  _recover_refs.py  _validate.py  conftest.py  dojo.json  package.json  prepare.sh  pyproject.toml  teardown.sh
dojos/build-llm/katas/001-bigram-language-model/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/002-autoregressive-generation/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/003-encoder-vs-decoder/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/004-training-pairs-from-text/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/005-simple-regex-tokenizer/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/006-tokenizer-with-special-tokens/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/007-bpe-via-tiktoken/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/008-gpt-dataset/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/build-llm/katas/009-embeddings-and-lookup/: SENSEI.md  _ref.py  solution.py  test_solution.py
dojos/pydantic-agents/: .editorconfig  CHANGELOG.md  DOJO.md  conftest.py  dojo.json  package.json  prepare.sh  pyproject.toml  teardown.sh
(+968 files in other folders)
