[project]
name = "dojocho-build-llm"
version = "0.0.1"
description = "Build an LLM (and a reasoning model) from scratch — katas for dojocho"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "tiktoken>=0.8",
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
