[project]
name = "dojocho-pydantic-agents"
version = "0.0.1"
description = "Pydantic & pydantic-ai katas for dojocho"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11",
  "pydantic-ai>=0.2",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
